# Paddle-Iluvatar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  README_cn.md  build_inc.sh  build_paddle.sh  clean_paddle.sh  setup.py
.github/workflows/: ci.yml
cmake/: cblas.cmake  cuda.cmake  third_party.cmake
common/: cuda_flags.cc
csrc/: device.cpp  error.cpp  memory.cpp  stream.cpp
docs/: api_reference.md  architecture.md  integration.md  quickstart.md
examples/: basic_device.py  benchmark.py  memory_operations.py  stream_operations.py
include/paddle_iluvatar/: device.h  error.h  memory.h  stream.h
kernels/cuda_kernels/: activation_kernel_register.cc  cast_kernel_register.cc  elementwise_grad_kernel_register.cc  fp8_quant_blockwise_kernel_register.cu  fused_conv2d_add_act_kernel_register.cu  group_norm_grad_kernel_register.cu  kldiv_loss_kernel_register.cu  mp_allreduce_sum_kernel_register.cu  multiplex_grad_kernel_register.cu  yolo_box_post_kernel_register.cu
kernels/ernie_core/: expand_modality_expert_id_kernel_register.cc  layer_norm_cuda_kernel.cu  moe_gate_dispatch_permute_kernel_register.cc  moe_ops_partial_nosoftmaxtopk_kernel_register.cc  top_p_sampling_kernel.cu
kernels/impl/: conv_cudnn_impl.h
patches/: paddle-corex.patch
patches/eigen/: Core  Tensor
python/paddle_iluvatar/: __init__.py  device.py  memory.py  stream.py
tests/: run_test.sh  test_device.py  test_memory.py  test_stream.py
tests/unittests/: test_flash_attention_iluvatar.py  (+4 more)
unittest_runner/: classify_failed_test.py  extract_passed_tests.py  test_runner.py
(+12 files in other folders)
